--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "devliving.online.securedpreferencestoresample"
-        minSdkVersion 18
-        targetSdkVersion 27
+        minSdkVersion 19
+        targetSdkVersion 22
         versionCode 4
         versionName "1.2.0"
     }
@@ -29,4 +30,14 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     //implementation 'online.devliving:securedpreferencestore:0.7.3'
     implementation project(':securedpreferencestore')
+
+    debugImplementation 'com.willowtreeapps.hyperion:hyperion-core:0.9.24'
+    debugImplementation 'com.willowtreeapps.hyperion:hyperion-shared-preferences:0.9.24'
+    debugImplementation 'com.willowtreeapps.hyperion:hyperion-build-config:0.9.24'
+    debugImplementation 'com.willowtreeapps.hyperion:hyperion-timber:0.9.24'
+    debugImplementation 'com.willowtreeapps.hyperion:hyperion-phoenix:0.9.24'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
