--- a/securedpreferencestore/build.gradle
+++ b/securedpreferencestore/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: "com.jfrog.bintray"
 
@@ -6,11 +7,11 @@ version = "0.7.4"
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 27
+        minSdkVersion 19
+        targetSdkVersion 22
         versionCode 14
         versionName version
     }
@@ -27,6 +28,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.1.1'
 
     testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 def siteUrl = "https://github.com/iamMehedi/Secured-Preference-Store"
@@ -115,4 +117,7 @@ bintray {
             }
         }
     }
+}
+repositories {
+    mavenCentral()
 }
